Added truvo style

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -26,6 +26,7 @@
 <link rel="stylesheet" href="lib/slickgrid/slick.example.theme.css" type="text/css"/>
 <link rel="stylesheet" href="lib/slickgrid/smoothness/jquery-ui-1.8.16.custom.css" type="text/css"/>
 <link rel="stylesheet" href="css/mapsearch.css" type="text/css"/>
+<link rel="stylesheet" href="css/styleguide-full.css" type="text/css"/>
   
 
 <style>
