--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -84,10 +84,11 @@ body {
 	<script src="lib/angular-ui/angular-ui-ieshiv.js"></script>
 	<script src="js/mapsearch.js"></script>
 	<script src="js/googleMapService.js"></script>
+	<script src="js/shapeService.js"></script>
 	<script src="js/controller/mainController.js"></script>
 	<script src="js/controller/projectController.js"></script>
 		
-
+	
 
 </body>
 </html>
